--- a/Menu.HTML
+++ b/Menu.HTML
@@ -10,16 +10,16 @@
     <header>
         <div class="container">
             <h1>The Kombi Koffee</h1>
-            <p>Brisbane's Enchanted Coffee Roasters</p>
+            <p>Brisbane's Enchanted Koffee Roasters</p>
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="Kombi Koffee 3.HTML">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#">About Us</a>
                     <ul class="dropdown-menu">
                         <li><a href="About.HTML">Our Story</a></li>
-                        <li><a href="team.html">Meet the Team</a></li>
+                        <li><a href="Team.HTML">Meet the Team</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
