--- a/Team.HTML
+++ b/Team.HTML
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="Kombi Koffee 3.HTML">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#">About us</a>
                     <ul class="dropdown-menu">
